--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 spring.mvc.view.prefix=/webapp/html/
 spring.mvc.view.suffix=.html
 
+#Connecting our application to the database
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/mz
+spring.datasource.username=root
+spring.datasource.password=root
+
+
 
