Displaying Error Messages Validations

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,3 +1,4 @@
 name.not.null=Name cannot be empty!
 name.size=Name should be more than 1 character!
 field.not.empty=This field cannot be empty!
+phone.not.correct=Phone number is incorrect!
