--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.mvc.view.prefix=/webapp/html/
+spring.mvc.view.prefix=/webapp/WEB-INF/html/
 spring.mvc.view.suffix=.html
 
 #Connecting our application to the 'mz' database
